[project]
name = "thlun"
version = "0.1.0"
description = "CLI library"
authors = [
  { name = "Ashreach" }
] 
maintainers = [
  { name = "Netronis" },
  { name = "Rastgame" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/Ashreach/ThLun"
Source = "https://github.com/Ashreach/ThLun"
Organization = "https://github.com/Ashreach"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]
